--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
+        "laravel/pint": "^1.10",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ignition": "^2.0"
@@ -50,6 +51,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "quality": [
+            "XDEBUG_MODE=off ./vendor/bin/pest --parallel --no-coverage",
+            "./vendor/bin/pint",
+            "./vendor/bin/phpstan analyse"
         ]
     },
     "extra": {
