--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "vue-tsc && vite build",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix resources/js",
+        "format": "prettier \"resources/js/\" --write",
         "socketi:start": "docker run -p 6001:6001 -p 9601:9601 quay.io/soketi/soketi:0.17-16-alpine"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.4.0",
@@ -17,7 +20,21 @@
         "postcss": "^8.4.18",
         "pusher-js": "^8.0.2",
         "tailwindcss": "^3.2.1",
+        "typescript": "^5.0.2",
         "vite": "^4.0.0",
-        "vue": "^3.2.41"
+        "vue": "^3.2.41",
+        "vue-tsc": "^1.2.0",
+        "@types/pusher-js": "^5.1.0",
+        "@babel/preset-env": "^7.21.5",
+        "@rushstack/eslint-patch": "^1.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.6",
+        "@typescript-eslint/parser": "^5.59.6",
+        "@vue/eslint-config-prettier": "^7.1.0",
+        "@vue/eslint-config-typescript": "^11.0.3",
+        "eslint": "^8.41.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-vue": "^9.13.0",
+        "prettier": "2.8.8",
+        "vite-tsconfig-paths": "^4.2.0"
     }
 }
