--- a/package.json
+++ b/package.json
@@ -6,35 +6,37 @@
         "build": "vue-tsc && vite build",
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix resources/js",
         "format": "prettier \"resources/js/\" --write",
-        "socketi:start": "docker run -p 6001:6001 -p 9601:9601 quay.io/soketi/soketi:0.17-16-alpine"
+        "soketi:start": "docker run -p 6001:6001 -p 9601:9601 quay.io/soketi/soketi:0.17-16-alpine",
+        "quality": "npm run lint && npm run format"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.21.5",
         "@inertiajs/vue3": "^1.0.0",
+        "@rushstack/eslint-patch": "^1.3.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/pusher-js": "^5.1.0",
         "@types/ziggy-js": "^1.3.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.6",
+        "@typescript-eslint/parser": "^5.59.6",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vue/eslint-config-prettier": "^7.1.0",
+        "@vue/eslint-config-typescript": "^11.0.3",
         "autoprefixer": "^10.4.12",
         "axios": "^1.4.0",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-vue": "^9.13.0",
         "laravel-echo": "^1.15.1",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
+        "prettier": "2.8.8",
         "pusher-js": "^8.0.2",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^4.0.0",
+        "vite-tsconfig-paths": "^4.2.0",
         "vue": "^3.2.41",
-        "vue-tsc": "^1.2.0",
-        "@types/pusher-js": "^5.1.0",
-        "@babel/preset-env": "^7.21.5",
-        "@rushstack/eslint-patch": "^1.3.0",
-        "@typescript-eslint/eslint-plugin": "^5.59.6",
-        "@typescript-eslint/parser": "^5.59.6",
-        "@vue/eslint-config-prettier": "^7.1.0",
-        "@vue/eslint-config-typescript": "^11.0.3",
-        "eslint": "^8.41.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-vue": "^9.13.0",
-        "prettier": "2.8.8",
-        "vite-tsconfig-paths": "^4.2.0"
+        "vue-eslint-parser": "^9.3.1",
+        "vue-tsc": "^1.2.0"
     }
 }
